fix balance patch
